# noo

./: LICENSE  README.txt  TODO.txt
articles/: Intro.rtf
client/: .qmake.stash  CMakeLists.txt  Chooka.sln  Info.plist  License.rtf  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  appevents.cpp  appevents.h  attachmentsdialog.cpp  attachmentsdialog.h  attachmentsdialog.ui  attachmentslist.cpp  attachmentslist.h  attachmentslist.ui  browserwidget.cpp  browserwidget.h  browserwidget.ui  chooka.pro  config.h  connectdb_widget.cpp  connectdb_widget.h  connectdb_widget.ui  encryption.cpp  encryption.h  finddialog.cpp  finddialog.h  finddialog.ui  findsupport.cpp  findsupport.h  helper.cpp  helper.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  (+89 more)
client/assets/images/: README.txt
client/assets/images/app_icon/macos/: buildicon-osx.sh
client/assets/misc/: noo.desktop
client/build-number/: build_number.h  build_number.ps1  build_number.sh
client/fervor/: CMakeLists.txt  Fervor.pri  fvavailableupdate.h  fvignoredversions.cpp  fvupdater.cpp  fvupdater.h  fvupdatewindow.cpp  fvupdatewindow.h  fvupdatewindow.ui
client/icons/: StopIcon.dbdoc  appicon-osx.icns  appicon.dbdoc
client/icons/app/: README.md
client/qmarkdowntextedit/: markdownhighlighter.cpp
client/qtkeychain/: CMakeLists.txt
client/qtkeychain/translations/: qtkeychain_de.ts  qtkeychain_ro.ts
client/resources/qdarkstyle/: style.qss
client/sqlitecpp/: CMakeLists.txt
client/sqlitecpp/include/SQLiteCpp/: Column.h  Database.h  Exception.h
client/sqlitecpp/sqlite3/: CMakeLists.txt
client/sqlitecpp/src/: Database.cpp
lib/graphics/: PlayIcon.dbdoc
lib/include/openssl/: opensslconf.h
lib/openssl/: version.txt
lib/openssl/win32/: ssleay32.lib
lib/openssl/win64/: ssleay32.lib
lib/osx/: libqsqlcipher.dylib  libqsqlcipher_debug.dylib
lib/uuid/lib/osx/: libuuid.dylib
lib/win32/: libeay32.lib  ssleay32.lib
redist/: LittAppCast.xml  build_linux.sh  build_osx_qt4.sh  build_osx_qt5.sh  changes.html  deploy-osx-build.sh  dmgsettings.py  get_changelog.sh  readme.txt  signapp-osx.sh  updater.py
scripts/: build_linux.sh  build_outliner.py  build_utils.py
server/backend/: README.md  server_litt.py
server/sql/: database.sql
site/: 403.shtml  404.shtml  LittAppCast.xml  RelNotes.html  changelog.txt  index.html  index.html.bak  releasenotes-template.html  releasenotes.html  test.php
temp/Litt.app/Contents/: Info.plist
temp/Litt.app/Contents/Frameworks/QtNetwork.framework/: QtNetwork
temp/Litt.app/Contents/Frameworks/QtNetwork.framework/Versions/5/_CodeSignature/: CodeResources
temp/Litt.app/Contents/Frameworks/QtPrintSupport.framework/: QtPrintSupport
temp/Litt.app/Contents/MacOS/: Litt
temp/Litt.app/Contents/PlugIns/bearer/: libqcorewlanbearer.dylib  libqgenericbearer.dylib
temp/Litt.app/Contents/PlugIns/imageformats/: libqdds.dylib  libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
temp/Litt.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
temp/Litt.app/Contents/Resources/: appicon-osx.icns
temp/Litt.app/Contents/_CodeSignature/: CodeResources
temp/dmgbuild-1.0.0/dmgbuild.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
